assets/css/style.css
@import 'malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css';
@import '@fancyapps/fancybox/dist/jquery.fancybox.css';
@import 'spectrum-colorpicker/spectrum.css';
@import 'reset-css';

/* base */

html {
    height: 100%;
    overflow-x: hidden;
}

body {
    font: lighter 18px/27px 'Open Sans', Arial, sans-serif;
    color: black;
    background: url(../images/bg.gif) repeat;
    height: 100%;
    position: relative;
}

select,
input {
    border: solid 1px #cccccc;
    border-radius: 2px;
    padding: 6px;
}

#mainui {
    height: 100%;

    /* to become visible after log-in */
    display: none;
}

#message {
    display: none;
    position: fixed;
    width: 100%;
    background: #e6e6fa;
    border: 1px solid #00008b;
    color: #00008b;
    filter: alpha(opacity=90);
    opacity: 0.9;
    z-index: 100;
    text-align: center;
    padding: 10px;
}

#message button {
    font: lighter 18px/27px 'Open Sans', Arial, sans-serif;
    text-align: center;
    border-radius: 2px;
    cursor: pointer;
    background: #cccccc;
    border: 0;
    color: currentColor;
    padding: 0;
}

#message.error {
    background: #f2dede;
    border-color: #eed3d7;
    color: #b94a48;
}

/* navigation */

#nav {
    background: #191718;
    border-right: 5px solid #3d6d69;
    z-index: 10;
    overflow-x: hidden;
}

#nav-filter a,
#nav-tags a,
#nav-sources a {
    display: block;
    text-decoration: none;
}

#nav hr {
    border: 0;
    border-bottom: 1px solid #272325;
}

#nav-logo {
    margin-left: 20px;
    margin-top: 14px;
    background: url(../images/logo.png);
    width: 31px;
    height: 37px;
}

#nav-mark {
    width: 150px;
    border: none;
    padding: 10px;
    margin-left: 15px;
    margin-right: 15px;
    color: #d7d7d7;
    background: #3d6d69;
    font-size: 0.9em;
    text-align: center;
    border-radius: 2px;
    cursor: pointer;
}

#nav-mark:hover {
    color: #000000;
}

#nav-filter-wrapper {
    overflow: hidden;
}

#nav-filter-title {
    margin-top: 20px;
}

#nav-filter {
    margin-bottom: 30px;
}

#nav-filter li a {
    color: #6a6a6a;
    padding: 5px;
    padding-left: 24px;
    margin-top: 5px;
    font-weight: normal;
    font-size: 0.9em;
    cursor: pointer;
}

#nav-filter li a.active {
    background: #272325;
    color: #d7d7d7;
    font-size: 1em;
}

#nav-filter span {
    font-size: 0.55em;
    color: #777777;
}

.unread-count {
    display: inline;
}

#nav-mobile-count.unread-count {
    display: none;
}

.unread-count.unread {
    background-color: #e74c3c;
    border-radius: 30px;
    color: white !important;
    font-size: 0.6em !important;
    padding: 0 5px 0 5px;
    margin-left: 5px;
    vertical-align: baseline !important;
    display: inline !important;
}

.unread-count.unread span {
    color: white !important;
    font-weight: normal;
    font-size: 1em !important;
}

.unread-count.online span.count::before {
    content: '\2601\a0'; /* cloud and non breaking space */
}

.unread-count.unread.offline {
    background-color: #187fff;
}

span.offline-count {
    display: none;
    color: #187fff !important;
}

.unread-count span.offline-count {
    color: white !important;
}

span.offline-count::after {
    content: ' / ';
    color: #187fff !important;
}

.unread-count span.offline-count::after {
    color: white !important;
}

span.offline-count.diff {
    display: inline !important;
}

.nav-section-toggle {
    cursor: pointer;
    background-color: transparent;
    display: block;
    width: 100%;
    text-align: inherit;
    line-height: 2;
    font-family: inherit;
    border: 0;
    color: #494949;
    text-transform: uppercase;
    font-size: 0.8rem;
    font-weight: bold;
}

#nav-tags-wrapper {
    overflow: hidden;
}

#nav-tags li a {
    position: relative;
    color: #b9b9b9;
    cursor: pointer;
    padding: 5px;
    padding-left: 25px;
    padding-right: 30px;
    font-weight: lighter;
    font-size: 0.7em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#nav-tags li a.active {
    background: #272325;
    color: #d7d7d7;
}

#nav-tags .color {
    position: absolute;
    left: 100%;
    top: 14px;
    width: 10px;
    height: 10px;
    margin-left: -30px;
    border-radius: 2px;
}

#nav-sources-wrapper {
    overflow: hidden;
}

#nav-sources {
    display: none;
}

#nav-sources li a {
    position: relative;
    color: #b9b9b9;
    cursor: pointer;
    padding-left: 25px;
    padding-right: 30px;
    font-weight: lighter;
    font-size: 0.7em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#nav-sources li a.active {
    background: #272325;
    color: #d7d7d7;
}

#nav-sources li a.unread {
    font-weight: bold;
    font-size: 0.7em;
}

#nav .unread {
    font-size: 0.9em;
    vertical-align: sub;
    color: #777777;
}

#nav-search {
    display: none;
}

.nav-toolbar * + * {
    margin-left: 0.2em;
}

#nav-refresh,
#nav-settings,
#nav-logout,
#nav-login {
    padding: 0;
    border: none;
    width: 45px;
    height: 45px;
    border-radius: 2px;
    cursor: pointer;
    background: #272325;
    color: #484447;
    font-size: 1.3em;
}

#nav-refresh.offline,
#nav-settings.offline,
#nav-logout.offline {
    border: solid #187fff 1px;
}

.nav-toolbar {
    text-align: center;
}

.nav-toolbar li {
    display: inline-block;
}

body:not(.publicupdate) #nav-login {
    width: 140px;
    margin-left: 0;
}

#nav-settings.nologin,
#nav-refresh.nologin {
    width: 70px;
}

#nav-mobile {
    display: none;
}

/* search */

#search {
    z-index: 9;
    position: absolute;
    left: -118px;
    top: 25px;
    padding: 5px;
    background: rgba(61, 109, 105, 0.4);
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    transition: left 0.5s ease-in-out;
}

#search.offline {
    display: none;
}

#search.active {
    left: 185px;
}

#search-term {
    width: 20em;
    margin-left: 0.5em;
}
/* ... */

